# tcf.agent

./: .gitignore  Makefile  Makefile.inc  cmake-tcf-lib.txt
agent/: CMakeLists.txt  Makefile  Makefile.inc  agent-vc2010.sln  agent.sln  agent.vcproj  agent.vcxproj  agent.vcxproj.filters
agent/tcf/: config.h
agent/tcf/framework/: asyncreq.c  asyncreq.h  base64.c  base64.h  cache.c  cache.h  channel.c  channel.h  channel_pipe.c  channel_pipe.h  channel_tcp.c  channel_tcp.h  context.c  context.h  cpudefs-ext.h  cpudefs.c  cpudefs.h  errors.c  errors.h  events.c  events.h  exceptions.c  exceptions.h  inputbuf.c  inputbuf.h  ip_ifc.c  json.c  json.h  link.h  mdep-inet.h  mdep-threads.h  mdep.c  mdep.h  myalloc.c  myalloc.h  outputbuf.c  outputbuf.h  peer.c  peer.h  plugins.c  (+14 more)
agent/tcf/machine/: elf-mdep.h
agent/tcf/main/: cmdline.c  cmdline.h  main.c  main_client.c  main_log.c  main_lua.c  main_reg.c  main_va.c  server.c  services.c  services.h  tcf-agent.init  tcf-agent.spec  test.c  test.h
agent/tcf/services/: breakpoints.c  breakpoints.h  contextquery.c  contextquery.h  diagnostics.c  diagnostics.h  disassembly.c  disassembly.h  discovery.c  discovery.h  discovery_udp.c  dprintf.c  dprintf.h  dwarf.h  dwarfcache.c  dwarfcache.h  dwarfecomp.c  dwarfecomp.h  dwarfexpr.c  dwarfexpr.h  dwarfframe.c  dwarfframe.h  dwarfio.c  dwarfio.h  dwarfreloc-ext.h  dwarfreloc.c  dwarfreloc.h  elf-loader.c  elf-loader.h  elf-symbols.c  elf-symbols.h  expressions.c  expressions.h  filesystem.c  filesystem.h  funccall.c  funccall.h  linenumbers.c  linenumbers.h  linenumbers_elf.c  (+38 more)
(+108 files in other folders)
